data/derived/fa15/progs/unify/prog3162.ml.out
Characters 77-86:
  | Sine e' -> "sin(pi*" + exprToString e' + ")"
               ^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
